rtptools 1.18 - Akira Tsukamoto [hgs]

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,4 +28,5 @@ EXTRA_DIST = ChangeLog ChangeLog.html COPYRIGHT rtptools.html bark.rtp \
         nt/include/rpcsvc/*.h nt/include/sys/*.h \
         nt/include/utilnt/*.h \
         hsearch.h multidump multiplay \
-        rtptools.dsw rtpdump.dsp rtpplay.dsp rtpsend.dsp rtptrans.dsp
+        rtptools.dsw rtpdump.dsp rtpplay.dsp rtpsend.dsp rtptrans.dsp \
+        bcb/*.bp? bcb/*.mak bcb/obj/*
