Add two files which were missing from last commit.   config.sub config.guess
Add 'make rpm_spec' to the make for automatically generating spec file
which is required for making Linux RPM/SRPM package.

Akira Tsukamoto

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,6 +28,9 @@ endif
 rtpsend_SOURCES = $(COMMON) rtpsend.c
 rtptrans_SOURCES= $(COMMON) rtptrans.c
 
+# make rpm_spec
+# This will automatically generate rtptools-VERSION.spec file 
+# which is required for making Linux's RPM/SRPM package.
 rpm_spec: rtptools.spec
 	@echo "Generating RPM spec file"
 	@echo "# Generated automatically from rtptools.spec"  > rtptools-$(VERSION).spec
@@ -37,11 +40,11 @@ rpm_spec: rtptools.spec
 #rpm: rtptools-$(VERSION).spec $(bin_PROGRAMS)
 #	rpm -ba 
 
-EXTRA_DIST = ChangeLog ChangeLog.html COPYRIGHT rtptools.html bark.rtp \
+EXTRA_DIST = ChangeLog.html COPYRIGHT rtptools.html bark.rtp \
         nt/*.c nt/include/*.h \
         nt/include/arpa/*.h nt/include/netinet/*.h \
         nt/include/rpcsvc/*.h nt/include/sys/*.h \
         nt/include/utilnt/*.h \
         hsearch.h hsearch.c multidump multiplay \
         rtptools.dsw rtpdump.dsp rtpplay.dsp rtpsend.dsp rtptrans.dsp \
-        bcb/*.bp? bcb/obj/*
+        bcb/*.bp? bcb/obj/* rtptools.spec
