--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(multimer.c)
-AM_INIT_AUTOMAKE(rtptools, 1.18)
+AM_INIT_AUTOMAKE(rtptools, 1.21)
 
 AC_CANONICAL_HOST
 
@@ -39,9 +39,10 @@ CU_CHECK_LIB(socket, socket)
 dnl Checks for header files.
 AC_HEADER_STDC
 AC_CHECK_HEADERS(search.h sys/time.h unistd.h)
+AC_CHECK_HEADER([rpcsvc/ypclnt.h],
+                [AC_DEFINE([HAVE_YP],[1],[Define to 1 if you have rpcsvc/ypclnt.h])])
 
 dnl Checks for typedefs, structures, and compiler characteristics.
-AM_C_PROTOTYPES
 AC_C_CONST
 AC_C_BIGENDIAN
 AC_TYPE_UID_T
