--- a/configure.am
+++ b/configure.am
@@ -1,6 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(multimer.c)
-AM_INIT_AUTOMAKE(rtptools, 1.21)
+AC_INIT([rtptools], [1.21])
+AC_CONFIG_SRCDIR([./rtpplay.c])
+AM_INIT_AUTOMAKE
 
 AC_CANONICAL_HOST
 
