Removed files which do not need to compile.
This was generating error creating Makefile with automake.

Signed-off-by: Akira Tsukamoto <akira-t@s9.dion.ne.jp>

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,8 +4,8 @@ AUTOMAKE_OPTIONS = foreign
 
 TAR = gtar
 
-bin_PROGRAMS = rtpdump rtpplay rtpsend rtptrans multidump multiplay
-man1_MANS    = rtpdump.1 rtpplay.1 rtpsend.1 rtptrans.1 multidump.1 multiplay.1
+bin_PROGRAMS = rtpdump rtpplay rtpsend rtptrans
+man_MANS     = rtpdump.1 rtpplay.1 rtpsend.1 rtptrans.1 multidump.1 multiplay.1
 
 COMMON = \
         ansi.h \
