Makefile.am: Remove dependency on GNU make.
Signed-off-by: Akira Tsukamoto <akira-t@s9.dion.ne.jp>

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,7 +31,7 @@ endif
 rtpsend_SOURCES = $(COMMON) rtpsend.c
 rtptrans_SOURCES= $(COMMON) rtptrans.c
 
-$(html_DATA): $(man_MANS)
+.1.html: $(man_MANS)
 	groff -Thtml -mdoc $< > $@
 
 # make rpm_spec
