Revised generating html from man.
1. Remoed using html2man based on the comment from Jan Stary.
2. Do not stop when tools to generate html were not installed.
   Just skip generating html, since man pages are installed
   locally and the html files are for linking from the homepage
   which is not mandatory for normal build.

Signed-off-by: Akira Tsukamoto <akira-t@s9.dion.ne.jp>

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,14 +13,11 @@ man_HTML     = rtpdump.html rtpplay.html rtpsend.html rtptrans.html \
 if HAVE_GROFF
 GEN_HTML = groff -Thtml -mdoc
 endif
-if HAVE_MAN2HTML
-GEN_HTML = man2html
-endif
 if HAVE_MANDOC
 GEN_HTML = mandoc -Thtml
 endif
 if !FOUND_GEN_HTML
-GEN_HTML = $(error Please install mandoc, man2html or groff.)
+GEN_HTML = echo "No mandoc or groff to generate html, skipping."
 endif
 
 COMMON = \
