--- a/configure.ac
+++ b/configure.ac
@@ -25,13 +25,11 @@ if test "x$GCC" = "xyes"; then
 fi
 
 AC_CHECK_PROG([FOUND_GROFF], [groff], [yes])
-AM_CONDITIONAL([HAVE_GROFF], [test "x$FOUND_GROFF" = xyes])
-AC_CHECK_PROG([FOUND_MAN2HTML], [man2html], [yes])
-AM_CONDITIONAL([HAVE_MAN2HTML], [test "x$FOUND_MAN2HTML" = xyes])
+AM_CONDITIONAL([HAVE_GROFF], [groff -Thtml -mdoc rtpplay.1 > rtpplay.html])
 AC_CHECK_PROG([FOUND_MANDOC], [mandoc], [yes])
-AM_CONDITIONAL([HAVE_MANDOC], [test "x$FOUND_MANDOC" = xyes])
-AM_CONDITIONAL([FOUND_GEN_HTML], [test "x$FOUND_GROFF" = xyes] || [test "x$FOUND_MAN2HTML" = xyes])
-AM_CONDITIONAL([FOUND_GEN_HTML], [test "x$FOUND_MANDOC" = xyes])
+AM_CONDITIONAL([HAVE_MANDOC], [mandoc -Thtml rtpplay.1 > rtpplay.html])
+AM_CONDITIONAL([FOUND_GEN_HTML], [test "x$HAVE_GROFF" = xyes])
+AM_CONDITIONAL([FOUND_GEN_HTML], [test "x$HAVE_MANDOC" = xyes])
 
 dnl Checks for libraries.
 
