--- a/Makefile.in
+++ b/Makefile.in
@@ -255,7 +255,6 @@ ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 FOUND_GROFF = @FOUND_GROFF@
-FOUND_MAN2HTML = @FOUND_MAN2HTML@
 FOUND_MANDOC = @FOUND_MANDOC@
 GREP = @GREP@
 INSTALL = @INSTALL@
@@ -340,9 +339,8 @@ man_MANS = rtpdump.1 rtpplay.1 rtpsend.1 rtptrans.1 multidump.1 multiplay.1
 man_HTML = rtpdump.html rtpplay.html rtpsend.html rtptrans.html \
                multidump.html multiplay.html
 
-@FOUND_GEN_HTML_FALSE@GEN_HTML = $(error Please install mandoc, man2html or groff.)
+@FOUND_GEN_HTML_FALSE@GEN_HTML = echo "No mandoc or groff to generate html, skipping."
 @HAVE_GROFF_TRUE@GEN_HTML = groff -Thtml -mdoc
-@HAVE_MAN2HTML_TRUE@GEN_HTML = man2html
 @HAVE_MANDOC_TRUE@GEN_HTML = mandoc -Thtml
 COMMON = \
         ansi.h \
