Revised to update the version in rtptools.html
This will remove the task editing rtptool.html every time
when the version changes.

Signed-off-by: Akira Tsukamoto <akira-t@s9.dion.ne.jp>

--- a/Makefile.in
+++ b/Makefile.in
@@ -934,6 +934,7 @@ uninstall-man: uninstall-man1
 
 .1.html: $(man_MANS)
 	$(GEN_HTML) $< > $@
+	sed s/VERSION/$(VERSION)/g rtptools.html.in > rtptools.html
 
 # make rpm_spec
 # This will automatically generate rtptools-VERSION.spec file 
