Remove Makefile.in in repository and replace with bootstrap script.
It is for reducing large changes in git repository every time
when revising Makefile.am.

Signed-off-by: Akira Tsukamoto <akira-t@s9.dion.ne.jp>

--- a/Makefile.am
+++ b/Makefile.am
@@ -70,4 +70,5 @@ EXTRA_DIST = ChangeLog.html rtptools.html bark.rtp \
         hsearch.h hsearch.c multidump multiplay \
         $(man_MANS) \
         rtptools.dsw rtpdump.dsp rtpplay.dsp rtpsend.dsp rtptrans.dsp \
-        bcb/*.bp? bcb/obj/* rtptools.spec
+        bcb/*.bp? bcb/obj/* rtptools.spec rtptools.html.in \
+        bootstrap
