More files to ignore of files generated by autotools.
Signed-off-by: Akira Tsukamoto <akira-t@s9.dion.ne.jp>

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 /.deps
 Makefile.in
 Makefile
-config.log
-config.status
+config.*
 autom4te.cache
+compile
+depcomp
+install-sh
+missing
+mkinstalldirs
 *.o
 /rtpdump
 /rtpplay
