Separated generating html pages.
Signed-off-by: Akira Tsukamoto <akira-t@s9.dion.ne.jp>

--- a/configure.ac
+++ b/configure.ac
@@ -24,12 +24,33 @@ if test "x$GCC" = "xyes"; then
   CFLAGS="$CFLAGS -Wall"
 fi
 
+dnl Checks for html conversion tool from man page
 AC_CHECK_PROG([FOUND_GROFF], [groff], [yes])
-AM_CONDITIONAL([HAVE_GROFF], [groff -Thtml -mdoc rtpplay.1 > rtpplay.html])
+if test x"$FOUND_GROFF" == x"yes" ; then
+  if $(groff -Thtml -mdoc rtpplay.1 > /dev/null 2>&1) ; then
+    WORKS_GROFF="yes"
+  fi
+fi
+AM_CONDITIONAL([HAVE_GROFF], [test x"$WORKS_GROFF" == x"yes"])
+
 AC_CHECK_PROG([FOUND_MANDOC], [mandoc], [yes])
-AM_CONDITIONAL([HAVE_MANDOC], [mandoc -Thtml rtpplay.1 > rtpplay.html])
-AM_CONDITIONAL([FOUND_GEN_HTML], [test "x$HAVE_GROFF" = xyes])
-AM_CONDITIONAL([FOUND_GEN_HTML], [test "x$HAVE_MANDOC" = xyes])
+if test x"$FOUND_MANDOC" == x"yes" ; then
+  if $(mandoc -Thtml rtpplay.1 > /dev/null 2>&1)  ; then
+    WORKS_MANDOC="yes"
+  fi
+fi
+AM_CONDITIONAL([HAVE_MANDOC], [test x"$WORKS_MANDOC" == x"yes"])
+
+AC_CHECK_PROG([FOUND_MAN2HTML], [man2html], [yes])
+if test x"$FOUND_MAN2HTML" == x"yes" ; then
+  if $(man2html rtpplay.1 > /dev/null 2>&1) ; then
+    WORKS_MAN2HTML="yes"
+  fi
+fi
+AM_CONDITIONAL([HAVE_MAN2HTML], [test x"$WORKS_MAN2HTML" == x"yes"])
+
+AM_CONDITIONAL([FOUND_GEN_HTML], [test x"$WORKS_GROFF" == x"yes"] || 
+  [test x"$WORKS_MANDOC" == x"yes"] || [test x"$WORKS_MAN2HTML" == x"yes"])
 
 dnl Checks for header files.
 AC_HEADER_STDC
