README: describe the git build, tweak wording

--- a/Makefile.am
+++ b/Makefile.am
@@ -77,4 +77,4 @@ EXTRA_DIST = ChangeLog.html bark.rtp \
         $(man_MANS) \
         rtptools.dsw rtpdump.dsp rtpplay.dsp rtpsend.dsp rtptrans.dsp \
         bcb/*.bp? bcb/obj/* rtptools.spec rtptools.html.in \
-        bootstrap LICENSE README.md
+        LICENSE README.md
