Updated spec related files to confirm recent rpmbuild rules
Signed-off-by: Akira Tsukamoto <akira-t@s9.dion.ne.jp>

--- a/Makefile.am
+++ b/Makefile.am
@@ -47,9 +47,12 @@ endif
 	done
 	sed s/VERSION/$(VERSION)/g rtptools.html.in > rtptools.html
 
-rpm: $(bin_PROGRAMS) rtptools.spec
-	sed s/VERSION/$(VERSION)/g  rtptools.spec >> rtptools-$(VERSION).spec
-	rpmbuild -ba rtptools-$(VERSION).spec
+rpm: $(bin_PROGRAMS) rtptools.spec rtptools-$(VERSION).tar.gz
+	mkdir -p ./rpmbuild/{BUILD,BUILDROOT,RPMS,SOURCES,SPECS,SRPMS}
+	cp rtptools-$(VERSION).tar.gz ./rpmbuild/SOURCES/.
+	sed s/VERSION/$(VERSION)/g  rtptools.spec > ./rpmbuild/SPECS/rtptools-$(VERSION).spec
+	cd ./rpmbuild; \
+	rpmbuild --define "_topdir `pwd`" -ba SPECS/rtptools-$(VERSION).spec
 
 clean-local:
 	rm -f $(man_HTML) rtptools.html
