--- a/Makefile.am
+++ b/Makefile.am
@@ -62,7 +62,7 @@ EXTRA_DIST = ChangeLog.html bark.rtp \
         win/*.c win/*.h win/include/*.h \
         win/include/arpa/*.h win/include/netinet/*.h \
         win/include/sys/*.h \
-        rtptools.sln rtptools.suo rtptools.sdf \
-        rtpdump.vcxproj* rtpplay.vcxproj* rtpsend.vcxproj* rtptrans.vcxproj* \
+        win/rtptools.sln win/rtptools.suo win/rtptools.sdf \
+        win/rtpdump.vcxproj* win/rtpplay.vcxproj* win/rtpsend.vcxproj* win/rtptrans.vcxproj* \
         rtptools.spec rtptools.html.in \
         LICENSE README.md
